add custom bluesky handle

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h2>Contact Me</h2>
         <p>I'd love to connect! You can find me here:</p>
         <ul>
-          <li><a href="https://bsky.app/profile/derzarfl.bsky.social" target="_blank">BlueSky</a></li>
+          <li><a href="https://bsky.app/profile/derzarfl.com" target="_blank">BlueSky</a></li>
             <li><a href="https://twitter.com/derzarfl" target="_blank">Twitter</a></li>
             <li><a href="https://github.com/yourgithubhandle" target="_blank">GitHub</a></li>
         </ul>
